# fantoccini

./: .codecov.yml  .gitignore  .travis.yml  .typos.toml  Cargo.toml  README.md  README.tmp.md  README.tpl  clippy.toml
.github/: dependabot.yml
.github/workflows/: check.yml  coverage.yml  features.yml  minimal.yml  msrv.yml  scheduled.yml  style.yml  test.yml
ci/: macos-latest-chrome  macos-latest-firefox  ubuntu-latest-chrome  ubuntu-latest-firefox  windows-latest-chrome.ps1  windows-latest-firefox.ps1
examples/: basic.rs  sync_example.rs  wait.rs
examples/async_await/: Cargo.toml  README.MD
examples/async_await/src/: main.rs
examples/basic_setup/: Cargo.toml  README.MD
examples/basic_setup/src/: main.rs
examples/extensions/: Cargo.toml
examples/extensions/src/: main.rs
examples/yew/: Cargo.toml  README.md  index.html
examples/yew/src/: main.rs
examples/yew/tests/: primera.rs
fantoccini_proc_macro/: Cargo.toml
fantoccini_proc_macro/src/: lib.rs
src/: actions.rs  call.rs  client.rs  common.rs  cookies.rs  elements.rs  error.rs  key.rs  keys.rs  lib.rs  print.rs  session.rs  sync.rs  traits.rs  user_prompts.rs  wait.rs  wd.rs
tests/: actions.rs  alert.rs  common.rs  elements.rs  local.rs  redirect_test.html  remote.rs
tests/test_html/: globe.html  iframe_inner.html  iframe_outer.html  other_page.html  redirect_test.html  sample_page.html  wikipedia_home_page.html  wikipedia_main_page.html
