[package]
name = "fantoccini"
version = "0.19.0-rc.1"
edition = "2021"

description = "High-level API for programmatically interacting with web pages through WebDriver."
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/fantoccini"
homepage = "https://github.com/jonhoo/fantoccini"
repository = "https://github.com/jonhoo/fantoccini.git"

keywords = ["webdriver", "chromedriver", "geckodriver", "phantomjs", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]

license = "MIT/Apache-2.0"

[features]
default = ["native-tls"]
native-tls = ["hyper-tls"]
rustls-tls = ["hyper-rustls"]

[dependencies]
webdriver = { version = "0.44", default-features = false }
url = "2.2.2"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.25"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "rt"] }
hyper = { version = "0.14", features = ["stream", "client", "http1", "http2"] }
cookie = { version = "0.16.0", features = ["percent-encode"] }
base64 = "0.13"
hyper-rustls = { version = "0.23.0", optional = true }
hyper-tls = { version = "0.5.0", optional = true }
mime = "0.3.9"
http = "0.2"
time = "0.3"

# to make -Zminimal-versions happy
# remove gcc and winapi 0.0.1 from build tree
_time01 = { version = "0.1.34", package = "time" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp"] }
serial_test = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
