[package]
name = "fantoccini"
version = "0.20.0-rc.4"
edition = "2021"

description = "High-level API for programmatically interacting with web pages through WebDriver."
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/fantoccini"
homepage = "https://github.com/jonhoo/fantoccini"
repository = "https://github.com/jonhoo/fantoccini.git"

keywords = ["webdriver", "chromedriver", "geckodriver", "phantomjs", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]

license = "MIT/Apache-2.0"

[features]
default = ["native-tls"]
native-tls = ["hyper-tls"]
rustls-tls = ["hyper-rustls"]

[dependencies]
webdriver = { version = "0.46", default-features = false }
url = "2.2.2"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.25"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "rt", "time"] }
hyper = { version = "0.14", features = ["stream", "client", "http1"] }
cookie = { version = "0.16.0", features = ["percent-encode"] }
base64 = "0.13"
hyper-rustls = { version = "0.23.0", optional = true }
hyper-tls = { version = "0.5.0", optional = true }
mime = "0.3.9"
http = "0.2"
time = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp"] }
serial_test = "2.0"

# for minimal-versions
[target.'cfg(any())'.dependencies]
openssl = "0.10.35" # through native-tls, <.35 no longer builds

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
