[package]
name = "fantoccini_proc_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
