[package]
name = "basic_setup"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.12.0"

[dependencies.tokio]
version = "0.2.6"
features = ["macros"] # Needed for #[tokio::main]
