[package]
name = "extensions"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = {path="../../"}
futures = "0.3.0"
tokio = {version="0.2.21", features=["macros"]}
serde_json = "1.0.56"
serde = "1.0.114"
