[package]
name = "proc_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }

[dev-dependencies]
fantoccini = {path = "../../../fantoccini"}
tokio = { version = "1", features = ["full"] }
serial_test = "2.0"
